# MultiTrackHSV

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Config/: calibration.json  logger.config
Libraries/EasyLogging/: easylogging++.h
Libraries/Opencv3.1/include/opencv/: cv.hpp  cvaux.hpp  cxcore.hpp
Libraries/Opencv3.1/include/opencv2/: cvconfig.h  opencv_modules.hpp
Libraries/Opencv3.1/lib/: libopencv_calib3d.so.3.1.0  libopencv_features2d.so.3.1.0  libopencv_flann.so.3.1.0  libopencv_highgui.so.3.1.0  libopencv_imgcodecs.so.3.1.0  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_photo.so.3.1.0  libopencv_shape.so.3.1.0  libopencv_stitching.so.3.1.0  libopencv_superres.so.3.1.0  libopencv_video.so.3.1.0  libopencv_videoio.so.3.1.0  libopencv_videostab.so.3.1.0  libopencv_viz.so.3.1.0
Libraries/Opencv3.1/lib/pkgconfig/: opencv.pc
Source/: main.cpp
Source/Interfaces/: CMultiTrackerApp.cpp  CMultiTrackerApp.h
Source/Utility/: Utility.h
